--- a/NetworkInterface/NetworkInterface/NetworkInterface.csproj
+++ b/NetworkInterface/NetworkInterface/NetworkInterface.csproj
@@ -67,6 +67,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Network.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
