--- a/NetworkInterface/NetworkInterface/NetworkInterface.csproj
+++ b/NetworkInterface/NetworkInterface/NetworkInterface.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Network.cs" />
+    <Compile Include="Package.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
