rename Nework.cs to NetworkServer.cs. re do the code for it

--- a/NetworkInterface/NetworkInterface/MessageRelaySystem.csproj
+++ b/NetworkInterface/NetworkInterface/MessageRelaySystem.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{3D65F9AC-10A0-4093-83A5-EC90E3D4CFC2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NetworkInterface</RootNamespace>
+    <RootNamespace>Network</RootNamespace>
     <AssemblyName>NetworkInterface</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -67,8 +67,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Network.cs" />
-    <Compile Include="Package.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
