--- a/NetworkInterface/Network/Network.csproj
+++ b/NetworkInterface/Network/Network.csproj
@@ -35,7 +35,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Network.cs" />
+    <Compile Include="NetworkServer.cs" />
     <Compile Include="Package.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
