--- a/NetworkInterface/P2CCore/P2CCore.csproj
+++ b/NetworkInterface/P2CCore/P2CCore.csproj
@@ -51,6 +51,10 @@
       <Project>{6EE72055-E5BD-4F72-AC32-3F554AC395BB}</Project>
       <Name>P2Crypt</Name>
     </ProjectReference>
+    <ProjectReference Include="..\P2CCommon\P2CCommon.csproj">
+      <Project>{9073d64b-dd36-4982-8543-48e732b7d2fe}</Project>
+      <Name>P2CCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
