--- a/NetworkInterface/Network/Network.csproj
+++ b/NetworkInterface/Network/Network.csproj
@@ -38,6 +38,15 @@
     <Compile Include="NetworkServer.cs" />
     <Compile Include="Package.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Windows" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\P2CCommon\P2CCommon.csproj">
+      <Project>{9073d64b-dd36-4982-8543-48e732b7d2fe}</Project>
+      <Name>P2CCommon</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
