--- a/NetworkInterface/Network/Network.csproj
+++ b/NetworkInterface/Network/Network.csproj
@@ -46,6 +46,10 @@
       <Project>{9073d64b-dd36-4982-8543-48e732b7d2fe}</Project>
       <Name>P2CCommon</Name>
     </ProjectReference>
+    <ProjectReference Include="..\P2CCore\P2CCore.csproj">
+      <Project>{dbe51873-f540-4852-9b2a-8186bc7bf50e}</Project>
+      <Name>P2CCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
