--- a/NetworkInterface/P2CCore/P2CCore.csproj
+++ b/NetworkInterface/P2CCore/P2CCore.csproj
@@ -47,7 +47,7 @@
     <Compile Include="UserAccount.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\P2Crypt\P2Crypt\P2Crypt.csproj">
+    <ProjectReference Include="..\P2Crypt\P2Crypt.csproj">
       <Project>{6EE72055-E5BD-4F72-AC32-3F554AC395BB}</Project>
       <Name>P2Crypt</Name>
     </ProjectReference>
