--- a/NetworkInterface/Network/Network.csproj
+++ b/NetworkInterface/Network/Network.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\P2CCommon\P2CCommon.csproj">
