--- a/NetworkInterface/MessageRelaySystem/MessageRelaySystem.csproj
+++ b/NetworkInterface/MessageRelaySystem/MessageRelaySystem.csproj
@@ -98,6 +98,10 @@
       <Project>{dfc49d71-d20a-46a0-a85e-8857fcaa8404}</Project>
       <Name>Network</Name>
     </ProjectReference>
+    <ProjectReference Include="..\P2CCommon\P2CCommon.csproj">
+      <Project>{9073d64b-dd36-4982-8543-48e732b7d2fe}</Project>
+      <Name>P2CCommon</Name>
+    </ProjectReference>
     <ProjectReference Include="..\P2CCore\P2CCore.csproj">
       <Project>{dbe51873-f540-4852-9b2a-8186bc7bf50e}</Project>
       <Name>P2CCore</Name>
