--- a/NetworkInterface/P2CCommon/P2CCommon.csproj
+++ b/NetworkInterface/P2CCommon/P2CCommon.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IPackage.cs" />
+    <Compile Include="IPendingPackageState.cs" />
     <Compile Include="IPublicProfile.cs" />
     <Compile Include="IUserAccount.cs" />
     <Compile Include="IUserInteractor.cs" />
