Add PendingPackageState and update Send button event handler and make NetworkServer.Send to be more versatile

--- a/NetworkInterface/Network/Network.csproj
+++ b/NetworkInterface/Network/Network.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="NetworkServer.cs" />
     <Compile Include="Package.cs" />
+    <Compile Include="PendingPackageState.cs" />
     <Compile Include="SocketServer.cs" />
   </ItemGroup>
   <ItemGroup>
