--- a/NetworkInterface/Network/Network.csproj
+++ b/NetworkInterface/Network/Network.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\P2CCommon\P2CCommon.csproj">
